--- a/core/pom.xml
+++ b/core/pom.xml
@@ -3,7 +3,7 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>org.tukkapi</groupId>
-  <artifactId>core</artifactId>
+  <artifactId>tukkapi-core</artifactId>
   <version>0.0.1</version>
   <packaging>jar</packaging>
 
